tests/missing-enum-end-brace.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a ',' or the end brace '}' to indicate the end of an enum definition.

enum e {
  a
